objects/G2Crowd__G2_Related_Organization__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__G2_Unique_Related_Organization_ID__c</fullName>
        <formula>G2Crowd__G2_Visiting_Organization__c &amp; &apos;::&apos; &amp; G2Crowd__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Unique Related Organization ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Visiting_Organization__c</fullName>
        <label>G2 Visiting Organization</label>
        <referenceTo>G2Crowd__G2_Visiting_Organization__c</referenceTo>
        <relationshipLabel>G2 Related Organizations</relationshipLabel>
        <relationshipName>G2_Related_Organizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>G2 Related Organizations</relationshipLabel>
        <relationshipName>G2_Related_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>G2 Related Organization</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>G2 Related Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G2 Related Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>